prevent collapse empty rows

--- a/styles/quick-query.less
+++ b/styles/quick-query.less
@@ -135,7 +135,7 @@ atom-panel.right{
 				}
 				tr{
 					width: 100%;
-					max-height: @component-line-height;
+					height: @component-line-height + @component-padding - 2px;
 					td{
 						overflow:ellipsis;
 						text-overflow: ellipsis;
